CheckForAbusePoint spreads to Alert,Confirm,Prompt. because of bug 130719. r=brendan,pavlov a=chofmann