mozilla/dom/src/base/nsGlobalWindow.cpp
@@ -2107,6 +2107,9 @@ GlobalWindowImpl::Alert(const nsAString& aString)
 {
   NS_ENSURE_STATE(mDocShell);
 
+  if (CheckForAbusePoint())
+    return NS_OK;
+
   nsAutoString str;
 
   str.Assign(aString);
@@ -2138,6 +2141,9 @@ NS_IMETHODIMP
 GlobalWindowImpl::Confirm(const nsAString& aString, PRBool* aReturn)
 {
   NS_ENSURE_STATE(mDocShell);
+
+  if (CheckForAbusePoint())
+    return NS_OK;
 
   nsAutoString str;
 
@@ -2176,6 +2182,9 @@ GlobalWindowImpl::Prompt(const nsAString& aMessage,
                          nsAString& aReturn)
 {
   NS_ENSURE_STATE(mDocShell);
+
+  if (CheckForAbusePoint())
+    return NS_OK;
 
   aReturn.Truncate(); // XXX Null string!!!
 
